--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,22 +9,23 @@
 <ion-content padding id="main">
 
 	<ion-tabs>
-	  <ion-tab-bar slot="top">
-	    <ion-tab-button tab="calendar">
-	      <ion-icon name="calendar"></ion-icon>
-	      <ion-label>Calendar</ion-label>
-	      <!-- <ion-badge>6</ion-badge> -->
-	    </ion-tab-button>
-
+	  <ion-tab-bar slot="bottom">
 	    <ion-tab-button tab="task">
-	      <ion-icon name="build"></ion-icon>
-	      <ion-label>Tasks</ion-label>
+	      <ion-icon name="clipboard"></ion-icon>
+	      <!-- <ion-label>Tasks</ion-label> -->
 	    </ion-tab-button>
 
 	    <ion-tab-button tab="file-cabinet">
 	      <ion-icon name="filing"></ion-icon>
-	      <ion-label>File Cabinet</ion-label>
+	      <!-- <ion-label>File Cabinet</ion-label> -->
 	    </ion-tab-button>
+	    
+	    <ion-tab-button tab="calendar">
+	      <ion-icon name="calendar"></ion-icon>
+	      <!-- <ion-label>Calendar</ion-label> -->
+	      <!-- <ion-badge>6</ion-badge> -->
+	    </ion-tab-button>
+
 	  </ion-tab-bar>
 	</ion-tabs>
     
