--- a/src/app/file-cabinet/file-cabinet.page.html
+++ b/src/app/file-cabinet/file-cabinet.page.html
@@ -1,10 +1,25 @@
 <ion-content padding style='position: relative;'>
+
+	<ion-row>
+		<ion-item class='filter-row'>
+			<img class='filter-icon' src='assets/imgs/settings_icon.png'/>
+			<label>Filter</label>
+
+			<ion-select class='filter-select' value="showall" (ionChange)='filterDownloadListByGroup()'>
+			  <ion-select-option *ngFor='let group of groups' value="{{group}}">{{group | uppercase}}</ion-select-option>
+			</ion-select>
+		</ion-item>
+	</ion-row>
+
 	<ion-list>
 		<div *ngFor="let file of storageService.files">
 			<ion-item *ngIf='file.name.toLowerCase().includes(searchService.searchInput.toLowerCase()) || searchService.searchInput == ""'>
 			  <ion-label>{{file.name}}</ion-label>
-			  <ion-button (click)='onClickDownload(file, $event)' fill='clear'>
-			  	<ion-icon name='cloud-download'></ion-icon>
+			  <ion-button (click)='onClickDownload(file, $event)' class='download-btn'>
+			  	<ion-icon name='download'></ion-icon>
+			  </ion-button>
+			  <ion-button (click)='onClickDelete(file, $event)' class='delete-btn'>
+			  	<ion-icon name='close'></ion-icon>
 			  </ion-button>
 			</ion-item>
 		</div>
@@ -13,6 +28,6 @@
 
   <ion-fab-button size="small" class="upload-fab" (click)="upload()">
   	<input type="file" name="" style='display: none;' class='hidden-input'/>
-  	<ion-icon name="add-circle-outline"></ion-icon>
+  	<ion-icon name="add"></ion-icon>
   </ion-fab-button>
 </ion-content>
