--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,3 +1,20 @@
 .settings-avatar{
 	margin: auto;
 }
+
+ion-toolbar{
+	--background: var(--ion-color-primary);
+}
+
+ion-tab-bar{
+	--background: var(--ion-color-primary);
+	--color: var(--ion-color-light);
+}
+
+ion-tab-button.tab-selected{
+	color: var(--ion-color-secondary);
+	--color-selected: var(--ion-color-secondary);
+}
+ion-tab-button{
+	--color-selected: var(--ion-color-light);
+}
