--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,25 +1,32 @@
-<ion-content padding>
-	<div class="main-container">
-		<div class="container1">
-			<ion-item>
-			  <ion-label position="floating">Email</ion-label>
-				<ion-input [(ngModel)]='email' name="email" type="text"></ion-input>
-			</ion-item>
-			<ion-item>
-			  <ion-label position="floating">Password</ion-label>
-				<ion-input [(ngModel)]='password' name="password" type="password"></ion-input>
-			</ion-item>
+<ion-content class='gradient-bg' padding >
+	<div class="wrapper">
+
+		<div class="main-container">
+
+			<div class='logo-container'>
+				<img class='logo' src="assets/imgs/app_logo.png"/>
+			</div>
+			<div class="login-inputs">
+				<input [(ngModel)]='email' name="email" type="text" placeholder='Username'/>
+				<input [(ngModel)]='password' name="password" type="password" placeholder='Password'/>
+			</div>
 
 			<div class="login-btns">
-				<ion-button (click)="login()">Login</ion-button>
-				<ion-button (click)="signup()">Signup</ion-button>
-				<ion-button (click)="googleLogin()">
-					<ion-icon name="logo-google"></ion-icon>
-					Google Login
-				</ion-button>
+				<div class='login-signup'>
+					<ion-button class='login-btn' (click)="login()">LOGIN</ion-button>
+					<a class='signup-btn' (click)="signup()">SIGNUP</a>
+				</div>
+				<h4 class='google-login-btn' (click)="googleLogin()">
+					<ion-icon class='google-icon'  name="logo-googleplus"></ion-icon> |
+					continue with Google
+				</h4>
 			</div>
-			
-			
+
+			<div class="ncc-logo">
+				<img class='logo' src="assets/imgs/ncc_logo.png"/>
+			</div>
+
 		</div>
+		
 	</div>
 </ion-content>
