--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -33,9 +33,9 @@
 
 <ion-menu side="start" menuId="main" content-id="main">
   <ion-content>
-  	<ion-avatar class="settings-avatar">
+  	<!-- <ion-avatar class="settings-avatar">
 		  <img src="../assets/hayley.png"/>
-		</ion-avatar>
+		</ion-avatar> -->
     <ion-list>
       <ion-item style="z-index: 9999;" (click)="navTo('/settings')">Settings</ion-item>
       <ion-item style="z-index: 9999;" (click)="navTo('/profile')">Profile</ion-item>
