--- a/src/app/modals/add-event/add-event.page.html
+++ b/src/app/modals/add-event/add-event.page.html
@@ -20,7 +20,9 @@
 		</ion-textarea >
 	</ion-item>
 
-	<ion-button (click)='onClickAddEvent($event)'>
-		Submit
-	</ion-button>
+	<div class='action-row'>
+		<ion-button (click)='onClickAddEvent($event)'>
+			Submit
+		</ion-button>
+	</div>
 </ion-content>
