--- a/src/app/task/task.page.scss
+++ b/src/app/task/task.page.scss
@@ -106,10 +106,11 @@ ion-tab-bar ion-button{
 }
 
 .tab-bar-icon{
-  width: 23px;
-  height: 23px;
+  width:18px;
+  height: 18px;
   vertical-align: middle;
   margin-right: 15px;
+  margin-top: 8px;
 }
 
 
