--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -1,30 +1,79 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>signup</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content padding class='gradient-bg'>
+	<div class='main-container'>	
+		<ion-card padding class='form-card'>
+			<form [formGroup]="loginForm">
+				<ion-card-header>
+					<ion-icon class='back-btn' name='arrow-back' (click)='navTo("/login")'></ion-icon>
+				</ion-card-header>
+				<div class='logo-container'>
+					<img class='logo' src="assets/imgs/app_logo.png"/>
+				</div>
+				<ion-item>
+				  <ion-label position='floating' >Name</ion-label>
+				  <ion-input type='text' formControlName='name' ></ion-input>
+				</ion-item>
 
-<ion-content padding>
-	<form>
+        <div class="error-list" >
+        	<div *ngFor="let validation of validationMessages.name" >
+	        	<h5 class="error-msg" *ngIf="loginForm.get('name').hasError(validation.type) && (loginForm.get('name').dirty || loginForm.get('name').touched)" >
+	        		{{validation.message}}
+	        	</h5>
+        	</div>
+        </div>
 
-		<ion-item>
-		  <ion-label position='floating' >Email</ion-label>
-		  <ion-input type='email' name='email' [(ngModel)]='email'></ion-input>
-		</ion-item>
+	
+				<ion-item>
+				  <ion-label position='floating' >Email</ion-label>
+				  <ion-input type='email' formControlName='email' ></ion-input>
+				</ion-item>
 
-		<ion-item>
-		  <ion-label position='floating' >Password</ion-label>
-		  <ion-input type='password' name='password' [(ngModel)]='password'></ion-input>
-		</ion-item>
 
-		<ion-item>
-		  <ion-label position='floating'>Repeat Password</ion-label>
-		  <ion-input type='password' name='password'  [(ngModel)]='repassword'></ion-input>
-		</ion-item>
+        <div class="error-list" >
+        	<div *ngFor="let validation of validationMessages.email" >
+	        	<h5 class="error-msg" *ngIf="loginForm.get('email').hasError(validation.type) && (loginForm.get('email').dirty || loginForm.get('email').touched)" >
+	        		{{validation.message}}
+	        	</h5>
+        	</div>
+        </div>
 
-		<ion-button (click)="signup()">
-			SIGNUP
-		</ion-button>
+	
+				<ion-item>
+				  <ion-label position='floating' >Password</ion-label>
+				  <ion-input type='password' formControlName='password' ></ion-input>
+				</ion-item>
 
-	</form>
+
+        <div class="error-list" >
+        	<div *ngFor="let validation of validationMessages.password" >
+	        	<h5 class="error-msg" *ngIf="loginForm.get('password').hasError(validation.type) && (loginForm.get('password').dirty || loginForm.get('password').touched)" >
+	        		{{validation.message}}
+	        	</h5>
+        	</div>
+        </div>
+
+				<ion-item>
+				  <ion-label position='floating'>Repeat Password</ion-label>
+				  <ion-input type='password' formControlName='repassword'  ></ion-input>
+				</ion-item>
+
+
+        <div class="error-list" >
+        	<div *ngFor="let validation of validationMessages.repassword" >
+	        	<h5 class="error-msg" *ngIf="loginForm.get('repassword').hasError(validation.type) && (loginForm.get('repassword').dirty || loginForm.get('repassword').touched)" >
+	        		{{validation.message}}
+	        	</h5>
+        	</div>
+        </div>
+
+	
+				<div class='action-row'>
+					<ion-button type="submit" class='signup-btn' (click)="signup()" 
+
+					>
+						SIGNUP
+					</ion-button>
+				</div>
+			</form>
+		</ion-card>
+	</div>
 </ion-content>
